# welkin-health

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: dependabot.yml
.github/workflows/: cd.yaml  ci.yaml  pre-commit-autoupdate.yaml  publish.yaml  test.yaml
docs/: conf.py  index.rst
test/: conftest.py  test_assessments.py  test_audit.py  test_authentication.py  test_base.py  test_calendar.py  test_care_plan.py  test_cdts.py  test_chat.py  test_client.py  test_document.py  test_email.py  test_encounters.py  test_exception.py  test_export.py  test_formation.py  test_formations.py  test_patients.py  test_program.py  test_sms.py  test_users.py  test_util.py  test_version.py
test/cassettes/: TestFormation.test_assessment_read.yaml  TestFormation.test_assessments_read.yaml  TestFormation.test_cdt_read.yaml  TestFormation.test_cdts_read.yaml  TestFormation.test_document_type_read.yaml  TestFormation.test_document_types_read.yaml  TestFormation.test_encounter_disposition_read.yaml  TestFormation.test_encounter_read.yaml  TestFormation.test_encounters_read.yaml  TestFormation.test_goal_read.yaml  TestFormation.test_goals_read.yaml  TestFormation.test_program_read.yaml  TestFormation.test_programs_read.yaml  TestProgram.test_delete.yaml  TestProgram.test_read[id].yaml  TestProgram.test_read[programName].yaml  TestProgram.test_update.yaml  TestPrograms.test_read.yaml  test_all_cdts_patient_read.yaml  test_all_encounters_patient_read.yaml  test_all_encounters_user_read.yaml  test_assessment_formation_read.yaml  test_assessment_formations_read.yaml  test_assessment_get.yaml  test_assessment_record_answers_update.yaml  test_assessment_record_create.yaml  test_assessment_record_delete.yaml  test_assessment_record_get.yaml  test_assessment_record_get_w_patient_id.yaml  test_assessment_record_update.yaml  test_assessment_records_get.yaml  test_assessment_records_get_patient_id.yaml  test_calendar_event_create.yaml  test_calendar_event_delete.yaml  test_calendar_event_read.yaml  test_calendar_event_read_all.yaml  test_calendar_event_update.yaml  test_care_plan_create.yaml  test_care_plan_create_passing_patient_id.yaml  test_care_plan_read.yaml  (+76 more)
test/cassettes/fixtures/: patient__TestProgram.test_delete.yaml  patient__TestProgram.test_read[id].yaml  patient__TestProgram.test_read[programName].yaml  patient__TestProgram.test_update.yaml  patient__TestPrograms.test_read.yaml  patient__test_program_read.yaml  patient_program__TestProgram.test_read[id].yaml  patient_program__TestProgram.test_read[programName].yaml  program__TestProgram.test_delete.yaml  program__TestProgram.test_update.yaml  users__test_work_hours_read_all.yaml
welkin/: __init__.py  __version__.py  authentication.py  client.py  exceptions.py  pagination.py  util.py
welkin/api/: __init__.py  calendar.py  patient.py  schema.py
welkin/models/: __init__.py  assessment.py  audit.py  base.py  calendar.py  care_plan.py  cdt.py  chat.py  document.py  email.py  encounter.py  export.py  formation.py  pagination.py  patient.py  program.py  sms.py  user.py  util.py
