[tool.poetry]
name = "welkin"
version = "0.1.2"
description = "Python Welkin Health API Wrapper."
authors = ["Sam Morgan <sama4mail@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/lightmatter/welkin-health"
documentation = "https://welkin.readthedocs.io"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lightmatter/welkin-health/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
portalocker = "^2.8.2"
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
pytest-vcr = "^1.0.2"
pytest-xdist = "^3.5.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "7.1.2"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["test/*"]

[tool.pytest.ini_options]
addopts = ["-n=auto"]
env_files = [".env", ".env.example"]
