[project]
name = "welkin"
version = "0.1.9"
dependencies = ["inflection>=0.5.1", "portalocker>=3.2.0", "requests>=2.34.2"]
requires-python = ">=3.10"
authors = [{ name = "Sam Morgan", email = "sama4mail@gmail.com" }]
description = "Python Welkin Health API Wrapper."
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Documentation = "https://welkin.readthedocs.io"
Repository = "https://github.com/lightmatter/welkin-health"
Issues = "https://github.com/lightmatter/welkin-health/issues"
Changelog = "https://github.com/Lightmatter/welkin-health/releases"

[build-system]
requires = ["uv_build>=0.11.31,<0.12"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev", "docs", "test"]

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = ["pre-commit>=4.6.1", "pyupgrade>=3.21.2", "ruff>=0.16.0"]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.8.0",
    "sphinx-rtd-theme>=3.1.0",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-vcr>=1.0.2",
    "pytest-xdist>=3.8.0",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.run]
omit = ["test/*"]

[tool.pytest.ini_options]
addopts = ["-n=auto"]
env_files = [".env", ".env.example"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
extend-exclude = ["*migrations/*"]
line-length = 92
target-version = "py39"
show-fixes = true

[tool.ruff.lint]
ignore = [
    "D1",   # Missing docstrings
    "D205", # 1 blank line required between summary line and description (does not allow wrapping of summary lines)
    "D407", # Dashed underline after doc section (not compatible with google style)
]
select = [ # https://docs.astral.sh/ruff/rules
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str-concat
    "EXE", # flake8-executable
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "TCH", # flake8-type-checking
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff
]
unfixable = ["D407"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs}/*" = ["S", "PLR2004", "PLR0913"]
"**/conftest.py" = ["S", "PLR2004", "PLR0913"]
"**/test*.py" = ["S", "PLR2004", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"
